# constrained_int

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  codecov.yaml  rust-toolchain  rust-toolchain.toml  tarpaulin.toml
.github/workflows/: audit.yaml  ci.yaml  publish.yaml
benches/: Cargo.toml  README.md  macros.rs  wrapping_add_int.rs  wrapping_add_uint.rs  wrapping_add_unsigned.rs  wrapping_sub_int.rs  wrapping_sub_uint.rs  wrapping_sub_unsigned.rs
benches/benches/int/: overflowing_add.rs  overflowing_add_unsigned.rs  overflowing_sub.rs  overflowing_sub_unsigned.rs  wrapping_add.rs  wrapping_add_unsigned.rs  wrapping_sub.rs  wrapping_sub_unsigned.rs
benches/benches/uint/: overflowing_add.rs  overflowing_add_signed.rs  overflowing_sub.rs  wrapping_add.rs  wrapping_add_signed.rs  wrapping_sub.rs
benches/int/: bench_add.rs  bench_add_unsigned.rs  bench_sub.rs  bench_sub_unsigned.rs  overflowing_add.rs  overflowing_add_unsigned.rs  overflowing_sub.rs  overflowing_sub_unsigned.rs  wrapping_add.rs  wrapping_add_unsigned.rs  wrapping_sub.rs  wrapping_sub_unsigned.rs
benches/src/: add_signed.rs  add_unsigned.rs  benches.rs  int.rs  lib.rs  naming.rs  sub_signed.rs  sub_unsigned.rs  uint.rs
benches/src/int/: bench_add.rs  bench_add_unsigned.rs  bench_sub.rs  bench_sub_unsigned.rs  mod.rs
benches/src/uint/: bench_add.rs  bench_add_signed.rs  bench_sub.rs  mod.rs
benches/uint/: bench_add.rs  bench_add_signed.rs  bench_sub.rs  overflowing_add.rs  overflowing_add_signed.rs  overflowing_sub.rs  wrapping_add.rs  wrapping_add_signed.rs  wrapping_sub.rs
ci/: report_public_api.sh
examples/: readme_example.rs
src/: lib.rs  sealed.rs  wrapping.rs
src/arithmetics/: mod.rs  saturating.rs  wrapping.rs
src/arithmetics/macros/: common.rs  int.rs  mod.rs
src/deserialize/: macros.rs  mod.rs
src/macros/: common.rs  int.rs  mod.rs  ops.rs  proptest.rs  uint.rs
src/num/: mod.rs  saturating.rs  wrapping.rs
src/num/macros/: common.rs  int.rs  mod.rs  saturating.rs  wrapping.rs
src/proptest/: macros.rs  mod.rs
src/wrapping/: macros.rs  mod.rs
src/wrapping/macros/: common.rs  int.rs  mod.rs  uint.rs
tests/: deserialize.rs  deserialize_error.rs  serialize.rs
