[package]
name = "constrained_int"
description = "Integers that are constrained within inclusive ranges."
version = "0.2.1"
edition = "2021"

license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/constrained_int"
repository = "https://github.com/pedromfedricci/constrained_int"
homepage = "https://github.com/pedromfedricci/constrained_int"
authors = ["Pedro de Matos Fedricci <pedromfedricci@gmail.com>"]

categories = ["no-std", "mathematics", "algorithms"]
keywords = ["no_std", "numerics"]

exclude = [".github", "ci", "Makefile.toml", "codecov.yaml"]

[features]
# This will import `std` as a dependency.
std = []
serde = ["dep:serde"]

[dependencies]
const_guards = { version = "0.1.3" }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
proptest = { version = "1" }
serde_test = { version = "1" }
criterion = { version = "0.3", features = ["html_reports"] }

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "deserialize"
required-features = ["serde"]

[[test]]
name = "deserialize_error"
required-features = ["serde"]

[[bench]]
name = "uint_wrapping_add"
path = "benches/uint/wrapping_add.rs"
harness = false

[[bench]]
name = "uint_wrapping_sub"
path = "benches/uint/wrapping_sub.rs"
harness = false

[[bench]]
name = "int_wrapping_add"
path = "benches/int/wrapping_add.rs"
harness = false

[[bench]]
name = "int_wrapping_sub"
path = "benches/int/wrapping_sub.rs"
harness = false

[[bench]]
name = "wrapping_add_unsigned"
path = "benches/int/wrapping_add_unsigned.rs"
harness = false

[[bench]]
name = "wrapping_sub_unsigned"
path = "benches/int/wrapping_sub_unsigned.rs"
harness = false
