[package]
name = "constrained_int"
description = "Integers that are constrained within inclusive ranges."
version = "0.2.1"
edition = "2021"

license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/constrained_int"
repository = "https://github.com/pedromfedricci/constrained_int"
homepage = "https://github.com/pedromfedricci/constrained_int"
authors = ["Pedro de Matos Fedricci <pedromfedricci@gmail.com>"]

categories = ["no-std", "mathematics", "algorithms"]
keywords = ["no_std", "numerics"]

exclude = [".github", "ci", "Makefile.toml", "codecov.yaml"]

[workspace]
members = [".", "benches"]

[features]
# This will import `std` as a dependency.
std = []
serde = ["dep:serde"]

[dependencies]
const_guards = { version = "0.1.3" }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
proptest = { version = "1" }
serde_test = { version = "1" }
criterion = { version = "0.3", features = ["html_reports"] }

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "deserialize"
required-features = ["serde"]

[[test]]
name = "deserialize_error"
required-features = ["serde"]
